<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40px">

    <TextView
        style="@style/PagerTitleStyle"
        android:text="@string/string_wp_pager" />

    <TextView
        android:id="@+id/tran_tv"
        style="@style/LoginTextStyle"
        android:layout_centerVertical="true"
        android:layout_marginTop="50px"
        android:text="@string/string_wp_help" />

    <TextView
        style="@style/LoginTextStyle"
        android:layout_above="@id/tran_tv"
        android:text="@string/string_wp_name" />

    <TextView
        android:id="@+id/jump_btn"
        style="@style/JumpBtnStyle"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20px"
        android:layout_marginLeft="110px" />

    <View
        android:id="@+id/line"
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_marginBottom="125px"
        android:layout_marginLeft="420px"
        android:layout_marginTop="125px"
        android:layout_toRightOf="@id/tran_tv"
        android:background="#80FFFFFF" />

    <TextView
        style="@style/PagerTitleStyle"
        android:layout_marginLeft="60px"
        android:layout_toRightOf="@id/line"
        android:text="@string/string_wp_test" />
</RelativeLayout>