<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40px">

    <TextView
        style="@style/PagerTitleStyle"
        android:text="@string/string_login_notice_txt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                style="@style/LoginTextStyle"
                android:drawableLeft="@drawable/icon_voice"
                android:text="@string/string_login_voice" />

            <TextView
                style="@style/LoginTextStyle"
                android:layout_marginBottom="48px"
                android:layout_marginTop="48px"
                android:drawableLeft="@drawable/icon_camera"
                android:text="@string/string_login_capture" />

            <TextView
                style="@style/LoginTextStyle"
                android:drawableLeft="@drawable/icon_nav"
                android:text="@string/string_login_nav" />
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#33FFFFFF" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/iphone_ly"
                style="@style/LoginEditStyle">

                <TextView
                    style="@style/LoginEditLabel"
                    android:text="@string/string_phone_name" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="#80FFFFFF" />

                <EditText
                    android:id="@+id/phone_et"
                    style="@style/LoginEdit" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/code_ly"
                style="@style/LoginEditStyle"
                android:layout_marginTop="20px">

                <TextView
                    style="@style/LoginEditLabel"
                    android:text="@string/string_id_code" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="#80FFFFFF" />

                <EditText
                    android:id="@+id/idcode_et"
                    style="@style/LoginEdit" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10px"
                    android:layout_marginTop="10px"
                    android:background="#80FFFFFF" />

                <TextView
                    android:id="@+id/getCode_tv"
                    android:layout_width="140px"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/string_get_code"
                    android:textColor="#4AA5FA"
                    android:textSize="22px" />

            </LinearLayout>

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="523px"
                android:layout_height="80px"
                android:layout_marginTop="20px"
                android:background="@drawable/selector_login_btn"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/string_login"
                android:textColor="#FFFFFF"
                android:textSize="30px" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/saomao_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:clickable="true"
        android:text="@string/string_saoma"
        android:textColor="#4AA5FA"
        android:textSize="24px"
        android:visibility="gone" />

</LinearLayout>