<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40px"
        android:text="@string/string_guide"
        android:textColor="#ffffff"
        android:textSize="32px" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:layout_marginTop="20px"
        android:layout_weight="1">

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null" />

    </ScrollView>

    <TextView
        android:id="@+id/start_trav"
        style="@style/JumpBtnStyle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30px"
        android:text="@string/string_start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20px"
        android:layout_marginTop="20px"
        android:text="@string/string_agree"
        android:textColor="#FFFFFF" />

</LinearLayout>